# auth-test

./: Cargo.toml  README.md  config.sample.toml  config.sample.yml
src/: config.rs  idauth.rs  main.rs
templates/: confirm_auth.html
