[package]
name = "id-contact-auth-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwe = { git = "https://github.com/id-contact/id-contact-jwe.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0.123"
serde_json = "1.0.61"
serde_yaml = "0.8.16"
base64 = "0.13.0"
reqwest = { version = "0.11.0", features = ["json"] }
josekit = "0.7.1"
urlencoding = "1.1.1"
