[package]
name = "id-contact-auth-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
base64 = "0.13.0"
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
josekit = "0.8.0"
reqwest = { version = "0.11.10", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
urlencoding = "2.1.0"
